# altium-ibom-releaser

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  README.md  altium_ibom_releaser.spec  dev.ps1  freeze.ps1  help.ps1  install.ps1  new_version.ps1  publish.ps1  pyproject.toml  requirements.txt
.github/workflows/: release.yml
dev_commands/: _assert_venv.ps1  release.ps1  setup.ps1  update.ps1
scripts/: Get-SystemPythonPath.ps1  Test-LfsPlaceholder.ps1  _assert_venv.ps1  _ensure_bin_path.ps1  build.ps1  build_dev_shim.ps1  build_exe.py  help.ps1  hint_conventional_commits.ps1  install_editable.ps1  install_exe.ps1  release.ps1  setup.ps1  shim_template.bat  update.ps1
src/altium_ibom_releaser/: __main__.py  common.py  patch_json.py  util.py
src/dev_shim/: __main__.py
tests/data/release_prepare/: .gitignore
tests/data/release_prepare/Assembly 24V/Pick Place/: Pick Place for Dummy(24V).csv  Pick Place for Dummy(24V).txt
tests/data/release_prepare/Assembly 24V/Script/: iBOM for Dummy(24V).cfg  iBOM for Dummy(24V).json
tests/data/release_prepare/Assembly 36V/Pick Place/: Pick Place for Dummy(36V).csv  Pick Place for Dummy(36V).txt
tests/data/release_prepare/Assembly 36V/Script/: iBOM for Dummy(36V).json
tests/data/release_prepare/Assembly/Pick Place/: Pick Place for Dummy.csv  Pick Place for Dummy.txt
tests/data/release_prepare/Assembly/Script/: iBOM for Dummy.json
util/: assert_venv.ps1  build_exe.py
