[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "altium-ibom-releaser"
dynamic = ["version"]
requires-python = ">= 3.10"
dependencies = ["InteractiveHtmlBom", "colorlog"]

[project.optional-dependencies]
dev = ["pre-commit", "pyinstaller", "python-semantic-release", "mypy", "ruff"]

[tool.setuptools.dynamic]
version = { attr = "altium_ibom_releaser.__version__" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["altium_ibom_releaser"]
exclude = ["dev_shim"]

[tool.setuptools.package-data]
"altium_ibom_releaser" = ["py.typed"]

[tool.semantic_release]
no_git_verify = false  # Set to true if you want to skip git pre-commit hooks
tag_format = "v{version}"
version_variables = [
    "src/altium_ibom_releaser/__init__.py:__version__:nf",
]
commit_message = "chore(release): {version}"
build_command = "python scripts/build_exe.py --stage"

# Unfortunately, with TLS decryption enabled in a corporate environment, we can't make python-semantic-release
# to use a custom SSL certificate. This is because it uses requests, which uses urllib3, which doesn't respect
# any environment variables related to SSL certificates.
upload_to_release = false

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.changelog]
exclude_commit_patterns = []  # Mention any commit message patterns to exclude from the changelog
mode = "update"  # Appends to the changelog file instead of overwriting it

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
mask_initial_release = true  # Do not list changes for the first release

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true

[tool.ruff]
line-length = 120
